fixtures/external/negative/embed-full-app-import/runtime.mjs
await import('@mog-sdk/embed/full-app');
